<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.algonquinlive.saad0033.guessanumber.MainActivity">

    <Button
        android:text="@string/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/reset_btn"
        android:layout_below="@+id/userGuess"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/play_btn"
        android:elevation="24dp"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/reset_btn"
        android:layout_alignTop="@+id/userGuess" />

    <ImageView
        android:layout_width="125dp"
        app:srcCompat="@mipmap/ic_gir"
        android:contentDescription="@string/img_description"
        android:id="@+id/img_gir"
        android:layout_height="125dp"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_guess"
        android:ems="10"
        android:id="@+id/userGuess"
        android:layout_marginTop="22dp"
        android:inputType=""
        tools:ignore="TextFields"
        android:layout_below="@+id/img_gir"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/gir_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:fontFamily="casual"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:layout_marginStart="26dp"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@+id/img_gir" />

    <TextView
        android:text="@string/gir_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textColor="@color/text"
        android:textAllCaps="false"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/img_gir"
        android:layout_marginStart="13dp" />

    <TextView
        android:text="@string/gir_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView"
        android:fontFamily="casual"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

</RelativeLayout>
